# hmo-claims-exercise

./: .pre-commit-config.yaml  Dockerfile  Makefile  ReadMe.md  application.py  docker-compose.yml  pyproject.toml
app/: app.py
app/claim/: __init__.py  forms.py  models.py  views.py
app/static/css/: main.css
app/static/js/: claim.js
app/templates/claims/: _macros.html  claim.html  claims.html  create_claim.html  edit_claim.html
app/templates/layouts/: base.html  header.html
app/templates/users/: create_user.html  edit_user.html  user_data.html  users_lists.html
app/users/: __init__.py  forms.py  models.py  views.py
instance/: config.py  intron_db.db
intron_health_migrations/: env.py
intron_health_migrations/versions/: 02f8cc481196_initial_migration.py  a5edf90fddbb_add_status_field.py
tests/: conftest.py  test_claims.py  test_users.py
